Fixed EventCreated Trigger, EventCreatedTriggerTest, AbstractCalendarTrigger according to review